# scodc

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  Makefile  README.org
.github/workflows/: build.yml  nightly.yml
etc/: CMakeLists.txt
etc/benchmark/: CMakeLists.txt  main.cpp
etc/test/: CMakeLists.txt  main.cpp  main.h
src/: CMakeLists.txt  Version.in  Version.in.h  scodc.cpp
